# template-mcu

./: README.md
stm32f4x/: CMakeLists.txt  STM32F411VET6.ld  openocd.cfg
stm32f4x/lib/RTT/: SEGGER_RTT_Conf.h
stm32f4x/src/: main.c
stm32l476x/: CMakeLists.txt  STM32L476RGTX_FLASH.ld  openocd.cfg
stm32l476x/src/: main.c
stm32l476x/src/drivers/: stm32l4xx_hal_conf.h
